--- a/app/src/main/res/layout/language_card.xml
+++ b/app/src/main/res/layout/language_card.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
+    android:background="#591C1C">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="122dp"
         android:background="#C8C5C1"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="8dp"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="8dp"
+        android:textAlignment="center">
 
         <TextView
             android:id="@+id/keyTextView"
@@ -20,19 +24,16 @@
 
         <TextView
             android:id="@+id/countryTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Country"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/languageTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Language:" />
 
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
