--- a/app/src/main/res/layout/language_card.xml
+++ b/app/src/main/res/layout/language_card.xml
@@ -10,9 +10,10 @@
         android:layout_height="122dp"
         android:background="#C8C5C1"
         android:orientation="vertical"
-        android:padding="8dp"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="8dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="5dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="20dp"
         android:textAlignment="center">
 
         <TextView
