--- a/app/src/main/res/layout/languagelist_card.xml
+++ b/app/src/main/res/layout/languagelist_card.xml
@@ -16,8 +16,8 @@
         android:textAlignment="center">
 
         <TextView
-            android:id="@+id/languageTextView"
-            android:layout_width="wrap_content"
+            android:id="@+id/languageView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="language:" />
 
